<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".simOneReminder.ReminderFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:tint="@color/fragmentIconColorTint"
            android:src="@drawable/reminder_icon"
            android:contentDescription="@string/reminder_fragment_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weeklyRemindersTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:shadowColor="@color/listSummaryTextShadow"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="4"
                android:textColor="@color/listSummaryColor" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/weeklyRemindersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/remindersFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            app:backgroundTint="@color/colorPrimary"
            android:elevation="6dp"
            android:src="@drawable/ic_action_add_white"
            android:theme="@style/FAB_Theme"
            android:layout_marginBottom="130dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </RelativeLayout>


</layout>

