...
    <string name="app_name">SimOne</string>
    <string name="logo_description">Launcher activity logo</string>
    <string name="app_slogan">You\'ll never forget to call…</string>
    <string name="get_started">Get Started</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_search">Search Contacts</string>
    <string name="today_fragment_title">Today\'s Calls</string>
    <string name="reminder_fragment_title">Manage Reminders</string>
    <string name="group_fragment_title">Manage Groups</string>
    <string name="call_action">Call action</string>
    <string name="delete_action">Delete action</string>
    <string name="add_action">Add action</string>
...
    <string name="update_reminder_success">Reminder updated successfully</string>
    <string name="status_badge"><![CDATA[<big>%1$d</big><br/><small>%2$s</small>]]></string>
    <string name="reminder_deleted_message">Reminder deleted successfully</string>
    <string name="delete_confirmation">Do you want to delete %1s?</string>

    <string-array name="bottomNavMenu">
        <item>Today</item>
        <item>Reminders</item>
        <item>Groups</item>
    </string-array>
    <string-array name="pageTitles">
        <item>@string/today_fragment_title</item>
        <item>@string/reminder_fragment_title</item>
        <item>@string/group_fragment_title</item>
    </string-array>
...
