...
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/editIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/call_action"
            android:padding="10dp"
            android:src="@drawable/ic_edit_grey" />

        <ImageView
            android:id="@+id/deleteIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/delete_action"
            android:padding="10dp"
            android:src="@drawable/ic_delete_grey" />
...
