...
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/colorAccentDark"
            android:text="@string/add_reminder_error"/>

        <EditText
            android:id="@+id/intervalEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/interval_hint"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp"
            android:inputType="number" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:textColor="@color/listSummaryColor" />

            <Button
                android:id="@+id/saveButton"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                android:textColor="@color/colorPrimaryDark" />

...
